k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-dashboard
  labels:
    app.kubernetes.io/part-of: traefik-log-dashboard
