k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-dashboard
  labels:
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: traefik-log-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-dashboard.example.com`) # <-- Change to your domain
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 3000
  tls:
    certResolver: letsencrypt # <-- Change to your cert resolver
